# soundpeats-linux

./: .gitignore  LICENSE  build.sh  exp.py  pyproject.toml  readme.md  server.py  soundpeats.service  soundpeats.zsh
re/: base.apk.jadx  notes.md
