[tool.poetry]
name = "libsoundpeats"
version = "0.1.0"
description = ""
authors = ["realazizk <me@aziz.tn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
bleak = "^0.22.2"
gattlib = "^0.20210616"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
